--- a/estilo/style.css
+++ b/estilo/style.css
@@ -56,6 +56,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
+    padding-bottom: 40px;
     text-shadow: 2px 2px 0px black; 
 }
 nav {
@@ -63,14 +64,14 @@ nav {
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.363);
 }
-nav > a{
+nav > a {
     color: white;
     padding: 5px;
     text-decoration: none;
     font-weight: bold;
     transition-duration: 0.3s;
 }
-nav > a:{
+nav > a:hover {
     background-color: var(--cor4);
     border-radius: 5px;
 }
